[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/smg_icon.png" type="Texture" id=1]
[ext_resource path="res://sprites/ak_icon.png" type="Texture" id=2]
[ext_resource path="res://hud/WeaponUI.gd" type="Script" id=3]

[node name="WeaponUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="WeaponUI" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0

[node name="weapon1" type="Sprite" parent="WeaponUI"]
position = Vector2( 100, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="weapon2" type="Sprite" parent="WeaponUI"]
position = Vector2( 100, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
